--- a/post-producer/docker-compose.yml
+++ b/post-producer/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '2'
 services:
-  # zookeeper:
-  #   image: wurstmeister/zookeeper:3.4.6
-  #   ports:
-  #     - "2181:2181"
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    ports:
+      - "2181:2181"
   kafka:
     image: confluentinc/cp-kafka:latest
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: 192.168.196.58:2181
+      KAFKA_ZOOKEEPER_CONNECT: 192.168.165.151:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       # 192.168.196.58:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
